--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Getting Started Example",
   "version": "1.0",
   "description": "Build an Extension!",
-  "permissions": ["declarativeContent", "storage"],
+  "permissions": ["activeTab", "declarativeContent", "storage"],
   "background": {
     "scripts": ["background.js"],
     "persistent": false
@@ -22,5 +22,6 @@
     "48": "images/get_started48.png",
     "128": "images/get_started128.png"
   },
+  "options_page": "options.html",
   "manifest_version": 2
 }
